@@ -415,7 +415,8 @@ $result_trees{'multitable'} = {
             {
               'parent' => {},
               'text' => '
-'
+',
+              'type' => 'spaces_at_end'
             }
           ],
           'parent' => {},
