@@ -70,7 +70,8 @@ $result_trees{'nested_multitable_anchor_index'} = {
                 {
                   'parent' => {},
                   'text' => '
-'
+',
+                  'type' => 'spaces_at_end'
                 }
               ],
               'parent' => {},
@@ -126,7 +127,8 @@ $result_trees{'nested_multitable_anchor_index'} = {
                                 {
                                   'parent' => {},
                                   'text' => '
-'
+',
+                                  'type' => 'spaces_at_end'
                                 }
                               ],
                               'parent' => {},
